# django-quality-demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NGINX_PROMETHEUS_SETUP.md  OBSERVABILITY.md  README.md  alloy-config.alloy  docker-compose.yml  generate_traffic.py  generate_traffic.sh  gunicorn.conf.py  main.py  manage.py  nginx.conf  prometheus.yml  promtail-config.yml  pyproject.toml  runserver.sh  sonar-project.properties
.github/workflows/: ruff.yml
products/: helpers.py  models.py  test_models.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_detail.html  product_list.html
qualitydemo/: asgi.py  otel_config.py  settings.py  urls.py  wsgi.py
