[project]
name = "django-quality-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "django>=5.2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "qualitydemo.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--cov=products",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
